PORT - convert BaseActivity from Activity to FragmentActivity + fix older versions crash